--- a/style2.css
+++ b/style2.css
@@ -205,7 +205,7 @@ main h1{
 
 .footer-img{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
 }
 
 .footer-div1{
