--- a/style2.css
+++ b/style2.css
@@ -2,10 +2,15 @@ body {
   font-family: sans-serif;
 }
 
+.footer{
+  width: 20px;
+}
+
 .end{
   display: flex;
   justify-content: space-between;
 }
+
 .end_part_one{
   display: flex;
   gap: 50px;
@@ -24,6 +29,7 @@ body {
   width: 100%;
   justify-content: space-between;
 }
+
 .ends{
   margin: 0 100px;
 }
