--- a/style2.css
+++ b/style2.css
@@ -68,10 +68,8 @@ align-items: center;
 width:100%;
 }
 
-
-
 details[open] .header-summary::after {
-transform: rotate(180deg) scaleX(1.3);
+transform: rotate(270deg) scaleX(1.3);
 
 
 }
@@ -119,15 +117,14 @@ padding-right: 20px;
 
 
 .header-summary::after {
-content: '⌄';
-font-size: 35px;
+content: 'ᐳ'; 
+font-size: 12px;
 margin-left: 8px;
 display: inline-block;
-transform: rotate(0deg) scaleX(1.3);
+transform: rotate(90deg) scaleX(1.3);
 transition: transform 0.3s ease;
 
 }
-
 .contacts_part_two{
   margin-right: 8%;
 }
